--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "count-down-react": "^1.0.12",
     "next": "14.2.5",
     "react": "^18",
-    "react-countdown-circle-timer": "^3.2.1",
-    "react-dom": "^18"
+	"react-dom": "^18"
   },
   "devDependencies": {
     "eslint": "^8",
