--- a/package.json
+++ b/package.json
@@ -6,13 +6,16 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "tidy": "yarn prettier . --write"
   },
   "dependencies": {
     "count-down-react": "^1.0.12",
+    "counterapi": "^1.72.0",
     "next": "14.2.5",
     "react": "^18",
-	"react-dom": "^18"
+    "react-cookie": "^7.2.0",
+    "react-dom": "^18"
   },
   "devDependencies": {
     "eslint": "^8",
