--- a/package.json
+++ b/package.json
@@ -1,24 +1,25 @@
 {
-  "name": "worldelephantday2024",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint",
-    "tidy": "yarn prettier . --write"
-  },
-  "dependencies": {
-    "count-down-react": "^1.0.12",
-    "counterapi": "^1.72.0",
-    "next": "14.2.5",
-    "react": "^18",
-    "react-cookie": "^7.2.0",
-    "react-dom": "^18"
-  },
-  "devDependencies": {
-    "eslint": "^8",
-    "eslint-config-next": "14.2.5"
-  }
+	"name": "worldelephantday2024",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint",
+		"tidy": "yarn prettier . --write"
+	},
+	"dependencies": {
+		"count-down-react": "^1.0.12",
+		"counterapi": "^1.72.0",
+		"next": "14.2.5",
+		"react": "^18",
+		"react-cookie": "^7.2.0",
+		"react-dom": "^18"
+	},
+	"devDependencies": {
+		"eslint": "^8",
+		"eslint-config-next": "14.2.5",
+		"prettier": "^3.3.3"
+	}
 }
